--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+body {
+  padding-top: 50px;
+  z-index: 0;
+}
+
 .row-content {
   margin: 0 auto;
   padding: 50px 0;
@@ -27,4 +32,8 @@
   font-size: 80%;
   margin: 0;
   color: #0f0f0f;
+}
+
+.navbar-dark {
+  background-color: #512da8;
 }
