--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,27 @@ body {
   border-bottom: 1px solid #ddd;
   padding: 10px;
 }
+
+.carousel {
+  background-color: #512da8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+}
+
+.carousel-caption h2 {
+  color: floralwhite;
+}
+
+.carousel-caption p {
+  color: floralwhite;
+  font-size: 1.2em;
+}
