--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,16 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-header {
+  background-color: #512da8;
+  border: 0px;
+  color: floralwhite; }
+  .modal-header .close {
+    color: floralwhite; }
+
+.modal-body {
+  background-color: #d1c4e9; }
+
+.login {
+  cursor: pointer; }
